test/fails/bad_parsing/coord.lgl
coord tag t is vec3;

void main() {
    print 1;
}